# TStrucTrial

./: README.md  pyproject.toml
config/: patents.yaml
src/: app_streamlit.py  patents_indexer.py  patents_query.py
src/utils/: chunk_text.py
vector_store/: stats.json
